controls: fix button dark mode icons & pressed state border

--- a/controls.css
+++ b/controls.css
@@ -69,14 +69,14 @@ input:where([type="button"], [type="submit"]) {
 	min-width: 75px;
 	height: unset;
 
-	&:active {
-		box-shadow: var(--border-button-sunken);
-	}
-
 	&:focus {
 		outline: dotted 1px var(--color-button-text);
 		outline-offset: -5px;
 		box-shadow: var(--border-button-focused);
+	}
+
+	&:active {
+		box-shadow: var(--border-button-sunken);
 	}
 }
 
@@ -102,8 +102,10 @@ input:where([type="button"], [type="submit"]) {
 
 		background: var(--button-img) no-repeat;
 		background-position: var(--button-img-pos, center);
+	}
 
-		@media (prefers-color-scheme: dark) {
+	@media (prefers-color-scheme: dark) {
+		&::before {
 			filter: invert();
 		}
 	}
